Doing some changes

--- a/index.html
+++ b/index.html
@@ -102,28 +102,6 @@
                         </ul>
                     </div>
                     <div class="activity">
-                        <div class="col-lg-6 col-xs-6 align-left column-small info">01/2017 - 07/2017</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, Trade Marketing</h3> 
-                        <a target="_blank" href="http://djezzy.dz/">
-                        <h4 class="institution">Fromagerie Bel Algérie</h4>
-                        </a>
-                        <ul class="tasks">
-                            <li><span>.</span> La conception collaborative, client industriel/fournisseur (Agence), d’une solution digitale (Application Mobile Métier) pour les besoins de l’équipe merchandising de Bel Algérie.</li>
-                        </ul>
-                    </div>
-                    <div class="activity">
-                        <div class="col-lg-6 col-xs-6 align-left column-small info">07/2016 - 08/2016</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, APPLINOVA</h3> 
-                        <a target="_blank" href="http://djezzy.dz/">
-                        <h4 class="institution">Groupe NOVASUP</h4>
-                        </a>
-                        <ul class="tasks">
-                            <li><span>.</span> Etude sur les principaux apports des applications mobiles pour les marques. Sondage sur avec analyse et reporting des metrics google analytics et des résultats de l’impact des A.M.</li>
-                        </ul>
-                    </div>
-                    <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">03/2015 - 09/2017</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Amsterdam (Remote)</div>
                         <h3 class="title">Copywriter &amp; Opératrice Mobile</h3> 
@@ -132,17 +110,6 @@
                         </a>
                         <ul class="tasks">
                             <li><span>.</span> Répondre aux messages entrants de manière amusante et créative et concevez des messages publicitaires mobiles.</li>
-                        </ul>
-                    </div>
-                    <div class="activity">
-                        <div class="col-lg-6 col-xs-6 align-left column-small info">06/2015 - 08/2015</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, Direction Marketing</h3> 
-                        <a target="_blank" href="http://djezzy.dz/">
-                        <h4 class="institution">Pfizer Pharm Algérie</h4>
-                        </a>
-                        <ul class="tasks">
-                            <li><span>.</span> Stage d'initiation à l'entreprise.</li>
                         </ul>
                     </div>
                 </div>
@@ -159,23 +126,45 @@
                         <div class="col-lg-6 col-xs-6 align-left column-small info">09/2014 - 06/2017</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Alger</div>
                         <h3 class="title">Master - Marketing &amp; Brand Management</h3> 
-                        <h4 class="institution">HEC Alger, Algiers</h4> 
+                        <h4 class="institution">HEC Alger, Alger</h4> 
                         <p> Gestion de la relation client <span class = "pipe"> | </span>Marketing numérique <span class = "pipe"> | </span>Gestion de projet <span class = "pipe"> | </span>Intelligence d'affaires <span class = "pipe"> | </span>Analyse des données <span class = "pipe"> | </span>Innovation <span class = "pipe"> | </span>Gestion de la marque <span class = "pipe"> | </span>Audit Marketing. </p>
                     </div>
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">06/2014</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Algiers</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Alger</div>
                         <h3 class="title">Concours d'Accès aux Grandes Écoles de Commerce</h3> 
                         <h4 class="institution">EP-SECG Draria, Alger</h4> 
                     </div>
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">09/2012 - 06/2014</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Algiers</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Alger</div>
                         <h3 class="title">École Préparatoire en Sciences Économiques Commerciales et Sciences de Géstion</h3> 
                         <h4 class="institution">EP-SECG Draria, Alger</h4> 
                         <p> Mathématiques <span class = "pipe"> | </span>Algorithmique <span class = "pipe"> | </span>Micro économie <span class = "pipe"> | </span>Macro économie <span class = "pipe"> | </span>Comptabilité <span class = "pipe"> | </span>Géographie économique <span class = "pipe"> | </span>Langues étrangères. </p>
                     </div>
-                </div>              
+                </div>      
+                <div class="activity-type">
+                    <h2 class="type">Langues</h2> 
+                    <div class="activity">
+                        <div class="col-lg-3 align-left column-small lang-row">
+                            <span class="lang">Français</span>(maternelle)
+                        </div>
+                        <div class="col-lg-3 align-left column-small lang-row">
+                            <span class="lang">Anglais</span>(intermédiaire)
+                        </div>
+                        <div class="col-lg-3 align-left column-small lang-row">
+                            <span class="lang">Arabe</span>(maternelle)
+                        </div>
+                    </div>
+                </div>
+                <div class="activity-type">
+                    <h2 class="type">Centres d'intérêts</h2> 
+                    <div class="activity">
+                        <p>
+                            Peinture <span>|</span> Bénévolat <span>|</span> Digital <span>|</span> Publicité <span>|</span> Media contemporains <span>|</span> Communication <span>|</span> Gestion de projet et évènement <span>|</span> Sport <span>|</span> Lecture <span>|</span>Solutions Innovantes
+                        </p>
+                    </div>
+                </div>         
             </div>
             <div class="col-lg-6 col-xs-12 align-left column">
                 <div class="activity-type">
@@ -202,10 +191,46 @@
                     </div>
                 </div>
                 <div class="activity-type">
+                    <h2 class="type">Stages pratiques</h2>
+                    <div class="activity">
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">01/2017 - 07/2017</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
+                        <h3 class="title">Stagière, Trade Marketing</h3> 
+                        <a target="_blank" href="http://djezzy.dz/">
+                        <h4 class="institution">Fromagerie Bel Algérie</h4>
+                        </a>
+                        <ul class="tasks">
+                            <li><span>.</span> La conception collaborative, client industriel/fournisseur (Agence), d’une solution digitale (Application Mobile Métier) pour les besoins de l’équipe merchandising de Bel Algérie.</li>
+                        </ul>
+                    </div>
+                    <div class="activity">
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">07/2016 - 08/2016</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
+                        <h3 class="title">Stagière, APPLINOVA</h3> 
+                        <a target="_blank" href="http://djezzy.dz/">
+                        <h4 class="institution">Groupe NOVASUP</h4>
+                        </a>
+                        <ul class="tasks">
+                            <li><span>.</span> Etude sur les principaux apports des applications mobiles pour les marques. Sondage sur avec analyse et reporting des metrics google analytics et des résultats de l’impact des A.M.</li>
+                        </ul>
+                    </div>
+                    <div class="activity">
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">06/2015 - 08/2015</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
+                        <h3 class="title">Stagière, Direction Marketing</h3> 
+                        <a target="_blank" href="http://djezzy.dz/">
+                        <h4 class="institution">Pfizer Pharm Algérie</h4>
+                        </a>
+                        <ul class="tasks">
+                            <li><span>.</span> Stage d'initiation à l'entreprise.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="activity-type">
                     <h2 class="type">Activités</h2> 
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">12/2016 - 05/2017</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info">Algiers</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">Co-Founder TRANSECO - Entreprise Étudiante Student Company</h3> 
                         <a href="https://www.insa-lyon.fr/fr/la-fili%C3%A8re-ing%C3%A9nieur-entreprendre-fie-c%C3%A9l%C3%A8bre-ses-10-ans-et-encourage-l%E2%80%99entrepreneuriat-des">
                         <h4 class="institution">INSA Lyon</h4> 
@@ -216,12 +241,12 @@
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">Membre Actif</h3>
                         <a target="_blank" href="https://www.thequest-ul.com/ChampionshipStage.aspx">
-                        <h4 class="institution">Association Soleil HEC</h4> 
+                        <h4 class="institution">Association Soleil HEC, Association START</h4> 
                         </a>
                     </div>
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">02/2015, 2017</div>
-                        <div class="col-lg-6 col-xs-6 align-right column-small info">Algiers</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">WikiStage HEC Alger, Organisatrice - Cellule communication</h3> 
                         <a target="_blank" href="http://www.wikistage.org/events/wikistage-hec-alger-1">
                         <h4 class="institution">Soleil HEC</h4> 
@@ -235,37 +260,15 @@
                         <h4 class="institution">HEC Alger</h4> 
                         </a>
                     </div>
-                    <div class="activity">
+                   <!--  <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">02/2015, 2016</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">Membre Actif</h3>
                         <a target="_blank" href="https://www.thequest-ul.com/ChampionshipStage.aspx">
                         <h4 class="institution">ASSOCIATION START</h4> 
                         </a>
-                    </div>
-                </div>
-                <div class="activity-type">
-                    <h2 class="type">Langues</h2> 
-                    <div class="activity">
-                        <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Français</span>(maternelle)
-                        </div>
-                        <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Anglais</span>(intermédiaire)
-                        </div>
-                        <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Arabe</span>(maternelle)
-                        </div>
-                    </div>
-                </div>
-                <div class="activity-type">
-                    <h2 class="type">Centres d'intérêts</h2> 
-                    <div class="activity">
-                        <p>
-                            Peinture <span>|</span> Bénévolat <span>|</span> Digital <span>|</span> Publicité <span>|</span> Media contemporains <span>|</span> Communication <span>|</span> Gestion de projet et évènement <span>|</span> Sport <span>|</span> Lecture <span>|</span>Solutions Innovantes
-                        </p>
-                    </div>
-                </div>  
+                    </div> -->
+                </div> 
             </div>
         </div>
     </section>
