--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <h4 class="institution">UM Mena</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> client principal: Fromagerie Bel Algérie.</li>
+                            <li><span>.</span> Compte client principal: Fromagerie Bel Algérie.</li>
                             <li><span>.</span> Elaboration de recommandations média pour le client.</li>
                             <li><span>.</span> Lancement et suivi des campagnes du client sur les différents médias.</li>
                             <li><span>.</span> Analyse des habitudes médiatiques.</li>
