--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="header">
         <div class="container">
                 <div class="col-lg-4 col-xs-12 align-left info">
-                    <h1>Ryma Oussedik</h1>
+                    <h1>Ryma Oussedik<h1>
                     <p id="desc">Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches.</p>
                     <a id="dl" download="SofiaKhodjaResume.pdf" href="https://sofiakhodja.github.io/SofiaKhodjaResume.pdf">
                      <h5><img class="in-pic" src="assets/img/dl.png" alt="download"/> Télécharger le CV</h5>
