--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
                                 <th class="level">Confirmée</th>
                             </tr>
                     </table>
-                        <div class="skill-bar" id="dcm" data-width="89">Digital campaign management</div>
+                        <div class="skill-bar" id="dcm" data-width="89">Media campaign management</div>
                         <div class="skill-bar" id="mr" data-width="86">Market Research</div>
                         <div class="skill-bar" id="pm" data-width="90">Project management</div>
                         <div class="skill-bar" id="gs" data-width="100">Google suite</div>
                         <div class="skill-bar" id="mo" data-width="100">Microsoft Office</div>
-                        <div class="skill-bar" id="sma" data-width="90">Social Media Analytics</div>
+                        <div class="skill-bar" id="sma" data-width="90">Management and Monitoring of the Media Budget</div>
                         <div class="skill-bar" id="ga" data-width="94">Google Analytics</div>
                         <div class="skill-bar" id="bap" data-width="85">Budgeting and planning</div>
                         <div class="skill-bar" id="fam" data-width="92">Facebook Ads Manager</div>
