--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-    <meta name="description" content="Enthusiast, ingenious and creative digital marketer. I like to merge the two worlds of creative and analytical thinking to get actionable insights."/>
+    <meta name="description" content="Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches."/>
     <meta name="keywords" content=""> 
     <meta name="copyright" content="Ryma Oussedik">
-    <meta name="author" content="Ryma Oussedik, khodja.sofia@gmail.com">
-    <meta name="url" content="https://sofiakhodja.github.io">
-    <meta name="revised" content="Monday, January 28th, 2019, 17:00" />
+    <meta name="author" content="Ryma Oussedik, ry.oussedi@gmail.com">
+    <meta name="url" content="https://rymaoussedik.github.io">
+    <meta name="revised" content="Friday, Sept. 20th, 2019, 21:00" />
     <meta property="og:title" content="Ryma Oussedik">
-    <meta property="og:description" content="Enthusiast, ingenious and creative digital marketer. I like to merge the two worlds of creative and analytical thinking to get actionable insights.">
-    <meta property="og:image" content="https://s3.amazonaws.com/saidziani/resume/thumb_sofia.png">
-    <meta property="og:url" content="https://sofiakhodja.github.io">
+    <meta property="og:description" content="Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches.">
+    <meta property="og:image" content="https://saidziani.s3.amazonaws.com/resume/thumb_ryma.png">
+    <meta property="og:url" content="https://rymaoussedik.github.io">
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Ryma Oussedik - Personal Website" />
     <meta property="twitter:title" content="Ryma Oussedik">
-    <meta property="twitter:description" content="Enthusiast, ingenious and creative digital marketer. I like to merge the two worlds of creative and analytical thinking to get actionable insights.">
-    <meta property="twitter:image" content="https://s3.amazonaws.com/saidziani/resume/thumb_sofia.png">
+    <meta property="twitter:description" content="Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches.">
+    <meta property="twitter:image" content="https://saidziani.s3.amazonaws.com/resume/thumb_ryma.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta name="twitter:image:alt" content="Ryma Oussedik">
     <title>Ryma Oussedik. | Personal Website</title>
@@ -29,13 +29,6 @@
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133350505-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-133350505-1');
-    </script>
 </head>
 <body>
 
@@ -44,7 +37,7 @@
                 <div class="col-lg-4 col-xs-12 align-left info">
                     <h1>Ryma Oussedik</h1>
                     <p id="desc">Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches.</p>
-                    <a id="dl" download="SofiaKhodjaResume.pdf" href="https://sofiakhodja.github.io/SofiaKhodjaResume.pdf">
+                    <a id="dl" download="RymaOussedikResume.pdf" href="https://rymaoussedik.github.io/RymaOussedikResume.pdf">
                      <h5><img class="in-pic" src="assets/img/dl.png" alt="download"/> Télécharger le CV</h5>
                     </a>
                 </div>
