adding some new experiences

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
                 <div class="col-lg-4 col-xs-12 align-left info">
                     <h1>Ryma Oussedik<h1>
-                    <p id="desc">Ambitieuse, engagée et motivée. Ayant le sens de la responsabilité, de l'organisation et du contact ainsi qu'une capacité d'intégration et de travail d'équipe efficace et dans la bonne humeur tout en étant autonome pour certaines tâches.</p>
+                    <p id="desc">Passionnée par le monde de la communication et du marketing, ma réelle expérience a débuté dans la gestion de projets Media. Persévérante et rigoureuse avec un énorme appétit pour les challenges, la stratégie et les pitchs font partie de mon quotidien. Un désir de parfaire mes compétences et de développer mes connaissances me pousse à chercher de nouvelles opportunités.</p>
                     <a id="dl" download="RymaOussedikResume.pdf" href="https://rymaoussedik.github.io/RymaOussedikResume.pdf">
                      <h5><img class="in-pic" src="assets/img/dl.png" alt="download"/> Télécharger le CV</h5>
                     </a>
@@ -62,19 +62,19 @@
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">05/2018 - présent</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Media Manager</h3> 
+                        <h3 class="title">Media Executive</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
-                        <h4 class="institution">UM Mena</h4>
+                        <h4 class="institution">UM WORLDWIDE<br>Compte client principal: Fromagerie Bel Algérie.</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> Compte client principal: Fromagerie Bel Algérie.</li>
-                            <li><span>.</span> Elaboration de recommandations média pour le client.</li>
-                            <li><span>.</span> Lancement et suivi des campagnes du client sur les différents médias.</li>
-                            <li><span>.</span> Analyse des habitudes médiatiques.</li>
-                            <li><span>.</span> Présentation de recommandations médiatiques.</li>
-                            <li><span>.</span> Préparation et évaluation des plans de TV à partir des grilles de visionnage.</li>
-                            <li><span>.</span> Recherche active de nouvelles opportunités médiatiques pour le client.</li>
-                            <li><span>.</span> Préparation de rapports de dépenses et des présentations compétitives.</li>
+                            <li><span>.</span> Elaboration de stratégie marketing et media pour les marques du client.</li>
+                            <li><span>.</span> Géstion des activités media 360°.</li>
+                            <li><span>.</span> Recommandation et conseil media (Budgets, canaux, timeline...).</li>
+                            <li><span>.</span> Anticipation des risques au lancement de campagnes publicitaires.</li>
+                            <li><span>.</span> Lancement et suivi des campagnes de marketing et communication.</li>
+                            <li><span>.</span> Estimation kpi's et veille concurrentielle.</li>
+                            <li><span>.</span> Evaluation des résultats et retour sur investissement.</li>
+                            <li><span>.</span> Participation et implication aux pitchs media.</li>
                         </ul>
                     </div>
                     <div class="activity">
@@ -82,16 +82,15 @@
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
                         <h3 class="title">Media Executive</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
-                        <h4 class="institution">UM Mena</h4>
+                        <h4 class="institution">UM WORLDWIDE<br>Compte client principal: Coca Cola Algérie.</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> Compte client principal: Coca Cola Algérie.</li>
-                            <li><span>.</span> Mise en place de plans média du client.</li>
-                            <li><span>.</span> Suivi des campagnes du client sur les différents médias.</li>
-                            <li><span>.</span> Analyse des habitudes médiatiques.</li>
-                            <li><span>.</span> Extraction et analyse des données des bureaux d’études.</li>
-                            <li><span>.</span> Présentation de recommandations médiatiques.</li>
-                            <li><span>.</span> Préparation et évaluation des plans de TV à partir des grilles de visionnage.</li>
+                            <li><span>.</span> Mise en place de planning media.</li>
+                            <li><span>.</span> Lancement et suivi des campagnes de marketing et communication.</li>
+                            <li><span>.</span> Analyse des habitudes mediatiques.</li>
+                            <li><span>.</span> Extraction et analyse des données de consommation media par les consommateurs.</li>
+                            <li><span>.</span> Préparation et évaluation des plans media à partir des grilles de visionnage.</li>
+                            <li><span>.</span> Elaboration d'études sur la consommation des medias offline et online par les consommateurs.</li>
                         </ul>
                     </div>
                     <div class="activity">
