adding new points inside internship

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                     <h2 class="type">Langues</h2> 
                     <div class="activity">
                         <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Français</span>(maternelle)
+                            <span class="lang">Français</span> (TCF SO C2)
                         </div>
                         <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Anglais</span>(intermédiaire)
+                            <span class="lang">Anglais</span>
                         </div>
                         <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Arabe</span>(maternelle)
+                            <span class="lang">Arabe</span>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,11 @@
                         <h4 class="institution">Fromagerie Bel Algérie</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> La conception collaborative, client industriel/fournisseur (Agence), d’une solution digitale (Application Mobile Métier) pour les besoins de l’équipe merchandising de Bel Algérie.</li>
+                            <li><span>.</span> Conception collaborative avec l'agence de développement d'une application mobile métier pour les besoins de l'équipe merchandising de bel.</li>
+                            <li><span>.</span> Elaboration de dispositifs événementiels suivant les campagnes marketing lancés.</li>
+                            <li><span>.</span> Coordination avec l'agence à la réalisation des outils de promotion sur les lieux de vente.</li>
+                            <li><span>.</span> Evaluation des retombées des informations du terrain (consommateurs et distributeurs)</li>
+                            <li><span>.</span> Mise en place de reporting précis pour la direction commerciale et le pôle des ventes</li>
                         </ul>
                     </div>
                     <div class="activity">
