adding new points to novasup

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                         <h4 class="institution">UM WORLDWIDE<br>Compte client principal: Fromagerie Bel Algérie.</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> Elaboration de stratégie marketing et media pour les marques du client.</li>
+                            <li><span>.</span> Élaboration de stratégie marketing et media pour les marques du client.</li>
                             <li><span>.</span> Géstion des activités media 360°.</li>
                             <li><span>.</span> Recommandation et conseil media (Budgets, canaux, timeline...).</li>
                             <li><span>.</span> Anticipation des risques au lancement de campagnes publicitaires.</li>
                             <li><span>.</span> Lancement et suivi des campagnes de marketing et communication.</li>
-                            <li><span>.</span> Estimation kpi's et veille concurrentielle.</li>
-                            <li><span>.</span> Evaluation des résultats et retour sur investissement.</li>
+                            <li><span>.</span> Éstimation kpi's et veille concurrentielle.</li>
+                            <li><span>.</span> Évaluation des résultats et retour sur investissement.</li>
                             <li><span>.</span> Participation et implication aux pitchs media.</li>
                         </ul>
                     </div>
@@ -88,9 +88,9 @@
                             <li><span>.</span> Mise en place de planning media.</li>
                             <li><span>.</span> Lancement et suivi des campagnes de marketing et communication.</li>
                             <li><span>.</span> Analyse des habitudes mediatiques.</li>
-                            <li><span>.</span> Extraction et analyse des données de consommation media par les consommateurs.</li>
+                            <li><span>.</span> Éxtraction et analyse des données de consommation media par les consommateurs.</li>
                             <li><span>.</span> Préparation et évaluation des plans media à partir des grilles de visionnage.</li>
-                            <li><span>.</span> Elaboration d'études sur la consommation des medias offline et online par les consommateurs.</li>
+                            <li><span>.</span> Élaboration d'études sur la consommation des medias offline et online par les consommateurs.</li>
                         </ul>
                     </div>
                     <div class="activity">
@@ -139,12 +139,12 @@
                     <h2 class="type">Langues</h2> 
                     <div class="activity">
                         <div class="col-lg-3 align-left column-small lang-row">
-                            <span class="lang">Français</span> (TCF SO C2)
+                            <span class="lang">Français </span>(TCF SO C2)
                         </div>
-                        <div class="col-lg-3 align-left column-small lang-row">
+                        <div class="col-lg-2 align-left column-small lang-row">
                             <span class="lang">Anglais</span>
                         </div>
-                        <div class="col-lg-3 align-left column-small lang-row">
+                        <div class="col-lg-2 align-left column-small lang-row">
                             <span class="lang">Arabe</span>
                         </div>
                     </div>
@@ -187,33 +187,35 @@
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">01/2017 - 07/2017</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, Trade Marketing</h3> 
+                        <h3 class="title">Stagiaire, Trade Marketing</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
                         <h4 class="institution">Fromagerie Bel Algérie</h4>
                         </a>
                         <ul class="tasks">
                             <li><span>.</span> Conception collaborative avec l'agence de développement d'une application mobile métier pour les besoins de l'équipe merchandising de bel.</li>
-                            <li><span>.</span> Elaboration de dispositifs événementiels suivant les campagnes marketing lancés.</li>
+                            <li><span>.</span> Élaboration de dispositifs événementiels suivant les campagnes marketing lancés.</li>
                             <li><span>.</span> Coordination avec l'agence à la réalisation des outils de promotion sur les lieux de vente.</li>
-                            <li><span>.</span> Evaluation des retombées des informations du terrain (consommateurs et distributeurs)</li>
+                            <li><span>.</span> Évaluation des retombées des informations du terrain (consommateurs et distributeurs)</li>
                             <li><span>.</span> Mise en place de reporting précis pour la direction commerciale et le pôle des ventes</li>
                         </ul>
                     </div>
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">07/2016 - 08/2016</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, APPLINOVA</h3> 
+                        <h3 class="title">Stagiaire, APPLINOVA</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
                         <h4 class="institution">Groupe NOVASUP</h4>
                         </a>
                         <ul class="tasks">
-                            <li><span>.</span> Etude sur les principaux apports des applications mobiles pour les marques. Sondage sur avec analyse et reporting des metrics google analytics et des résultats de l’impact des A.M.</li>
+                            <li><span>.</span> Participation à la phase de conception du projet Application Mobile.</li>
+                            <li><span>.</span> Contribution à l'élaboration du cahier des charges avec le développeur de l'application.</li>
+                            <li><span>.</span> Vérification que le développement est conforme au planning et au cahier des charges.</li>
                         </ul>
                     </div>
                     <div class="activity">
                         <div class="col-lg-6 col-xs-6 align-left column-small info">06/2015 - 08/2015</div>
                         <div class="col-lg-6 col-xs-6 align-right column-small info">Alger</div>
-                        <h3 class="title">Stagière, Direction Marketing</h3> 
+                        <h3 class="title">Stagiaire, Direction Marketing</h3> 
                         <a target="_blank" href="http://djezzy.dz/">
                         <h4 class="institution">Pfizer Pharm Algérie</h4>
                         </a>
